# Arc-compiler

./: .gitignore  Cargo.toml  DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  PHASE_1_COMPLETE.md  README.md
examples/: demo.arc
src/: lib.rs  main.rs
src/ast/: evaluator.rs  lexer.rs  mod.rs  parser.rs  symbol_table.rs  types.rs
